# nugget-protocol-NPB

./: .gitmodules  CMakeLists.txt  Makefile  README  README.md  all_experiments.py  create_m5_fs.py
BT/: CMakeLists.txt  bt.f90  make_source.err
BT/A/: add.ll  bt.bc  bt.ll  bt_O3_2024-12-03-13-52-30.bc  bt_data.ll  error.ll  exact_rhs.ll  exact_solution.ll  initialize.ll  npbparams.h  rhs.ll  set_constants.ll  verify.ll  work_lhs.ll  x_solve.ll  y_solve.ll  z_solve.ll
BT/B/: add.ll  adi.ll  bt.bc  bt.ll  bt_O3_2024-12-03-13-52-30.bc  bt_data.ll  error.ll  exact_rhs.ll  exact_solution.ll  initialize.ll  npbparams.h  rhs.ll  set_constants.ll  verify.ll  work_lhs.ll  x_solve.ll  y_solve.ll  z_solve.ll
BT/B/c_papi_naive/: bt_papi_naive.bc
BT/B/single_thread_c_papi_profiling/100000000/: bt_papi_profiling.bc  (+2 more)
BT/C/: add.ll  bt.bc  bt.ll  bt_O3_2024-12-03-13-52-30.bc  bt_data.ll  error.ll  exact_rhs.ll  exact_solution.ll  initialize.ll  npbparams.h  rhs.ll  set_constants.ll  verify.ll  work_lhs.ll  x_solve.ll  y_solve.ll  z_solve.ll
BT/D/: add.ll  bt.bc  bt.ll  bt_O3_2024-12-03-13-52-30.bc  bt_data.ll  error.ll  exact_rhs.ll  exact_solution.ll  initialize.ll  npbparams.h  rhs.ll  set_constants.ll  verify.ll  work_lhs.ll  x_solve.ll  y_solve.ll  z_solve.ll
BT/E/: add.ll  bt.bc  bt.ll  bt_O3_2024-12-03-13-52-30.bc  bt_data.ll  error.ll  exact_rhs.ll  exact_solution.ll  initialize.ll  npbparams.h  rhs.ll  set_constants.ll  solve_subs.ll  verify.ll  work_lhs.ll  x_solve.ll  y_solve.ll  z_solve.ll
CG/: CMakeLists.txt  cg.f90
CG/A/: cg.bc  cg.ll  cg_O3_2024-12-03-13-52-45.bc  cg_data.ll  npbparams.h
CG/B/: cg.bc  cg.ll  cg_O3_2024-12-03-13-52-45.bc  cg_data.ll  npbparams.h
CG/B/c_papi_naive/: cg_papi_naive.bc
CG/C/: cg.bc  cg.ll  cg_O3_2024-12-03-13-52-45.bc  cg_data.ll  npbparams.h
CG/D/: cg.bc  cg.ll  cg_O3_2024-12-03-13-52-45.bc  cg_data.ll  npbparams.h
CG/E/: cg.bc  cg.ll  cg_O3_2024-12-03-13-52-45.bc  cg_data.ll  npbparams.h
FT/: CMakeLists.txt  ft.f90  make_source.err
FT/A/: ft.bc  ft.ll  ft_O3_2024-12-03-13-52-50.bc  ft_data.ll  npbparams.h
FT/B/: ft.bc  ft.ll  ft_O3_2024-12-03-13-52-50.bc  ft_data.ll  npbparams.h
FT/B/c_papi_naive/: ft_papi_naive.bc
FT/C/: ft.bc  ft.ll  ft_O3_2024-12-03-13-52-50.bc  ft_data.ll  npbparams.h
FT/D/: ft.bc  ft.ll  ft_O3_2024-12-03-13-52-50.bc  ft_data.ll  npbparams.h
FT/E/: ft.bc  ft.ll  ft_O3_2024-12-03-13-52-50.bc  ft_data.ll  npbparams.h
IS/: CMakeLists.txt  is.c  make_source.err
IS/A/: is.bc  is.ll  is_O3_2024-12-03-13-52-54.bc  npbparams.h
IS/B/: is.bc  is.ll  is_O3_2024-12-03-13-52-54.bc  npbparams.h
IS/B/c_papi_naive/: is_papi_naive.bc
IS/C/: is.bc  is.ll  is_O3_2024-12-03-13-52-54.bc  npbparams.h
IS/D/: is.bc  is.ll  is_O3_2024-12-03-13-52-54.bc  npbparams.h
IS/E/: is.bc  is.ll  is_O3_2024-12-03-13-52-54.bc  npbparams.h
LU/: CMakeLists.txt  make_source.err  setparams  ssor.f90  ssor_doac.f90  ssor_hp.f90
LU/A/: buts.ll  domain.ll  erhs.ll  error.ll  exact.ll  jacld.ll  jacu.ll  lu.bc  lu.ll  lu_O3_2024-12-03-13-52-56.bc  lu_data.ll  npbparams.h  pintgr.ll  read_input.ll  rhs.ll  setbv.ll  setcoeff.ll  setiv.ll  ssor.ll  syncs.ll  verify.ll
LU/B/: domain.ll  erhs.ll  error.ll  exact.ll  jacld.ll  jacu.ll  lu.bc  lu.ll  lu_O3_2024-12-03-13-52-56.bc  lu_data.ll  npbparams.h  pintgr.ll  read_input.ll  rhs.ll  setbv.ll  setcoeff.ll  setiv.ll  ssor.ll  syncs.ll  verify.ll
LU/B/c_papi_naive/: lu_papi_naive.bc
LU/C/: domain.ll  erhs.ll  error.ll  exact.ll  jacld.ll  jacu.ll  lu.bc  lu.ll  lu_O3_2024-12-03-13-52-56.bc  lu_data.ll  npbparams.h  pintgr.ll  read_input.ll  rhs.ll  setbv.ll  setcoeff.ll  setiv.ll  ssor.ll  syncs.ll  verify.ll
LU/D/: blts.ll  domain.ll  erhs.ll  error.ll  exact.ll  jacld.ll  jacu.ll  lu.bc  lu.ll  lu_O3_2024-12-03-13-52-56.bc  lu_data.ll  npbparams.h  pintgr.ll  read_input.ll  rhs.ll  setbv.ll  setcoeff.ll  setiv.ll  ssor.ll  syncs.ll  verify.ll
LU/E/: domain.ll  erhs.ll  error.ll  exact.ll  jacld.ll  jacu.ll  l2norm.ll  lu.bc  lu.ll  lu_O3_2024-12-03-13-52-56.bc  lu_data.ll  npbparams.h  pintgr.ll  read_input.ll  rhs.ll  setbv.ll  setcoeff.ll  setiv.ll  ssor.ll  syncs.ll  verify.ll
MG/: CMakeLists.txt  make_source.err  mg.f90
MG/A/: mg.bc  mg.ll  mg_O3_2024-12-03-13-53-11.bc  mg_data.ll  npbparams.h
MG/B/: mg.bc  mg.ll  mg_O3_2024-12-03-13-53-11.bc  mg_data.ll  npbparams.h
MG/B/c_papi_naive/: mg_papi_naive.bc
MG/C/: mg.bc  mg.ll  mg_O3_2024-12-03-13-53-11.bc  mg_data.ll  npbparams.h
MG/D/: mg.bc  mg.ll  mg_O3_2024-12-03-13-53-11.bc  mg_data.ll  npbparams.h
MG/E/: mg.bc  mg.ll  mg_O3_2024-12-03-13-53-11.bc  mg_data.ll  npbparams.h
SP/: CMakeLists.txt  make_source.err  sp.f90
SP/A/: add.ll  error.ll  exact_rhs.ll  exact_solution.ll  initialize.ll  ninvr.ll  npbparams.h  pinvr.ll  rhs.ll  set_constants.ll  sp.bc  sp.ll  sp_O3_2024-12-03-13-53-16.bc  sp_data.ll  txinvr.ll  tzetar.ll  verify.ll  work_lhs.ll  x_solve.ll  y_solve.ll  z_solve.ll
SP/B/: add.ll  error.ll  exact_rhs.ll  exact_solution.ll  initialize.ll  ninvr.ll  npbparams.h  pinvr.ll  rhs.ll  set_constants.ll  sp.bc  sp.ll  sp_O3_2024-12-03-13-53-16.bc  sp_data.ll  txinvr.ll  tzetar.ll  verify.ll  work_lhs.ll  x_solve.ll  y_solve.ll  z_solve.ll
SP/B/c_papi_naive/: sp_papi_naive.bc
SP/C/: add.ll  error.ll  exact_rhs.ll  exact_solution.ll  initialize.ll  ninvr.ll  npbparams.h  pinvr.ll  rhs.ll  set_constants.ll  sp.bc  sp.ll  sp_O3_2024-12-03-13-53-16.bc  sp_data.ll  txinvr.ll  tzetar.ll  verify.ll  work_lhs.ll  x_solve.ll  y_solve.ll  z_solve.ll
SP/D/: add.ll  error.ll  exact_rhs.ll  exact_solution.ll  initialize.ll  ninvr.ll  npbparams.h  pinvr.ll  rhs.ll  set_constants.ll  sp.bc  sp.ll  sp_O3_2024-12-03-13-53-16.bc  sp_data.ll  txinvr.ll  tzetar.ll  verify.ll  work_lhs.ll  x_solve.ll  y_solve.ll  z_solve.ll
SP/E/: add.ll  adi.ll  error.ll  exact_rhs.ll  exact_solution.ll  initialize.ll  ninvr.ll  npbparams.h  pinvr.ll  rhs.ll  set_constants.ll  sp.bc  sp.ll  sp_O3_2024-12-03-13-53-16.bc  sp_data.ll  txinvr.ll  tzetar.ll  verify.ll  work_lhs.ll  x_solve.ll  y_solve.ll  z_solve.ll
(+4758 files in other folders)
